[package]
name = "egui-keybind"
description = "A keybind widget for egui"
version = "0.2.7"
edition = "2021"
license = "Unlicense OR MIT OR BSL-1.0"
authors = ["zeozeozeo"]
homepage = "https://github.com/zeozeozeo/egui-keybind"
repository = "https://github.com/zeozeozeo/egui-keybind"
readme = "README.md"
documentation = "https://docs.rs/egui-keybind"
keywords = ["egui", "keybind", "hotkey", "widget", "ui"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/zeozeozeo/egui.git", branch = "tesselate-return-option" }
serde = { version = "1.0.196", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "egui/serde"]
